--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <ul>
                 <li><a href="index.html">Acasă</a></li>
                 <li><a href="produse.html">Produse</a></li>
-                <li><a href="informații.html">Informații utile</a></li>
+                <li><a href="info.html">Informații utile</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
