--- a/informatii.html
+++ b/informatii.html
@@ -80,7 +80,7 @@
             <ul>
                 <li><a href="index.html">Acasă</a></li>
                 <li><a href="produse.html">Produse</a></li>
-                <li><a href="informatii.html">Informații utile</a></li>
+                <li><a href="info.html">Informații utile</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
