--- a/produse.html
+++ b/produse.html
@@ -89,6 +89,26 @@
     <section>
         <h3>Produsele noastre</h3>
         <p>Oferim soluții complete pentru automatizarea casei tale. Fie că îți dorești un sistem de iluminat inteligent, un termostat modern sau un sistem de securitate avansat, noi avem soluția ideală pentru tine.</p>
+        
+        <h4>Produse și Prețuri</h4>
+        <ul>
+            <li><b>Iluminat inteligent</b> (Incluzând întrerupător smart) - 450 lei</li>
+            <li><b>Termostat inteligent</b> - 650 lei</li>
+            <li><b>Sistem de securitate inteligent</b> (camere de supraveghere + alarmă) - 1200 lei</li>
+            <li><b>Accesorii diverse</b> (Senzori de mișcare, senzor de fum, senzor de gaz, barieră IR, senzor de ușă): 
+                <ul>
+                    <li>Senzori de mișcare - 100 lei</li>
+                    <li>Senzor de fum - 150 lei</li>
+                    <li>Senzor de gaz - 180 lei</li>
+                    <li>Barieră IR - 200 lei</li>
+                    <li>Senzor de ușă - 120 lei</li>
+                </ul>
+            </li>
+        </ul>
+
+        <p><b>Prețurile includ manopera, fără dispozitive și deplasare.</b></p>
+
+        <p><b>Pentru o ofertă personalizată, nu ezitați să ne contactați!</b></p>
     </section>
 
     <footer>
