--- a/produse.html
+++ b/produse.html
@@ -89,26 +89,70 @@
     <section>
         <h3>Produsele noastre</h3>
         <p>Oferim soluții complete pentru automatizarea casei tale. Fie că îți dorești un sistem de iluminat inteligent, un termostat modern sau un sistem de securitate avansat, noi avem soluția ideală pentru tine.</p>
-        
-        <h4>Produse și Prețuri</h4>
+
+        <h4>Listă produse și prețuri (cu dispozitive și manoperă)</h4>
         <ul>
-            <li><b>Iluminat inteligent</b> (Incluzând întrerupător smart) - 450 lei</li>
-            <li><b>Termostat inteligent</b> - 650 lei</li>
-            <li><b>Sistem de securitate inteligent</b> (camere de supraveghere + alarmă) - 1200 lei</li>
-            <li><b>Accesorii diverse</b> (Senzori de mișcare, senzor de fum, senzor de gaz, barieră IR, senzor de ușă): 
+            <li><b>Iluminat inteligent</b>
                 <ul>
-                    <li>Senzori de mișcare - 100 lei</li>
-                    <li>Senzor de fum - 150 lei</li>
-                    <li>Senzor de gaz - 180 lei</li>
-                    <li>Barieră IR - 200 lei</li>
-                    <li>Senzor de ușă - 120 lei</li>
+                    <li>Bec inteligent LED (instalare și configurare) - 250 RON/buc</li>
+                    <li>Bandă LED RGB (montaj și conectare la aplicație) - 300 RON/5 metri</li>
+                    <li>Întrerupător smart Wi-Fi (montaj și configurare) - 400 RON/buc</li>
+                </ul>
+            </li>
+            <li><b>Termostate inteligente</b>
+                <ul>
+                    <li>Termostat inteligent Wi-Fi (inclusiv instalare și configurare) - 850 RON</li>
+                    <li>Termostat pentru încălzire prin pardoseală (montaj și configurare) - 1.200 RON</li>
+                </ul>
+            </li>
+            <li><b>Sisteme de securitate inteligente</b>
+                <ul>
+                    <li>Cameră de supraveghere Wi-Fi (montaj și conectare la aplicație) - 500 RON/buc</li>
+                    <li>Pachet de 2 camere de supraveghere + hub (montaj inclus) - 1.300 RON</li>
+                    <li>Sistem complet de alarmă inteligentă (senzori uși/geamuri, sirenă, inclusiv instalare și configurare) - 2.000 RON</li>
+                </ul>
+            </li>
+            <li><b>Automatizarea electrocasnicelor</b>
+                <ul>
+                    <li>Priză inteligentă Wi-Fi (montaj și configurare) - 150 RON/buc</li>
+                    <li>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus) - 700 RON</li>
+                    <li>Robot aspirator inteligent (configurare și integrare în sistem) - 1.600 RON</li>
+                </ul>
+            </li>
+            <li><b>Control vocal și centralizare</b>
+                <ul>
+                    <li>Dispozitiv de control vocal (compatibil Alexa/Google Home) (configurare inclusă) - 350 RON</li>
+                    <li>Hub de automatizare Z-Wave (montaj și configurare) - 850 RON</li>
+                </ul>
+            </li>
+            <li><b>Accesorii utile</b>
+                <ul>
+                    <li>Senzor inteligent de temperatură și umiditate (instalare și integrare) - 200 RON</li>
+                    <li>Senzor de inundație Wi-Fi (montaj și configurare) - 200 RON</li>
+                    <li>Senzor de prezență (instalare și configurare) - 300 RON</li>
+                    <li>Senzor de fum inteligent (montaj și conectare la aplicație) - 400 RON</li>
+                    <li>Senzor de gaz inteligent (instalare și configurare) - 450 RON</li>
+                    <li>Senzor pentru uși/geamuri (montaj inclus) - 150 RON/buc</li>
+                    <li>Barieră IR (infraroșu) (montaj și configurare) - 600 RON</li>
                 </ul>
             </li>
         </ul>
 
-        <p><b>Prețurile includ manopera, fără dispozitive și deplasare.</b></p>
+        <h4>Costuri suplimentare: Manoperă fără dispozitive</h4>
+        <ul>
+            <li><b>Manoperă pentru iluminat inteligent:</b> Instalare bec, bandă LED sau întrerupător - 150 RON/locație</li>
+            <li><b>Manoperă pentru termostate inteligente:</b> Instalare termostat și configurare - 300 RON/termostat</li>
+            <li><b>Manoperă pentru sisteme de securitate:</b> Cameră de supraveghere - 200 RON/buc; Senzori de securitate (fum, gaz, prezență, barieră IR) - 150 RON/buc</li>
+            <li><b>Manoperă pentru accesorii inteligente:</b> Senzori temperatură, inundație, uși - 150 RON/buc; Priză inteligentă - 100 RON/buc</li>
+        </ul>
 
-        <p><b>Pentru o ofertă personalizată, nu ezitați să ne contactați!</b></p>
+        <h4>Costuri suplimentare: Deplasarea</h4>
+        <ul>
+            <li>Deplasare în municipiul Brașov - 50 RON</li>
+            <li>Deplasare în afara municipiului Brașov - 2 RON/km</li>
+        </ul>
+
+        <p><b>Pentru o ofertă personalizată, nu ezitați să mă contactați!</b></p>
     </section>
 
     <footer>
