--- a/produse.html
+++ b/produse.html
@@ -152,7 +152,7 @@
             <li>Deplasare în afara municipiului Brașov - 2 RON/km</li>
         </ul>
 
-        <p><b>Pentru o ofertă personalizată, nu ezitați să mă contactați!</b></p>
+        <p><b>Pentru o ofertă personalizată, nu ezitați să ne contactați! Watsapp - 0775602083 </b></p>
     </section>
 
     <footer>
