--- a/produse.html
+++ b/produse.html
@@ -88,8 +88,8 @@
 
     <section>
         <br>
-        <h3>Produsele noastre</h3>
         <br>
+        <h3>Produsele noastre:</h3>
         <p>Oferim soluții complete pentru automatizarea casei tale. Fie că îți dorești un sistem de iluminat inteligent, un termostat modern sau un sistem de securitate avansat, noi avem soluția ideală pentru tine.</p>
 
         <h4>Listă produse și prețuri (cu dispozitive și manoperă)</h4>
