--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,9 @@
         <br>
         <br>
         <h3>Contactează-ne</h3>
-        <p>Adresa noastră: Strada Exemplu, Brașov, România</p>
-        <p>Email: contact@casatainteligenta.ro</p>
-        <p>Telefon: 0123 456 789</p>
+        <p>Adresa noastră: str Aleea florilor 20, Brașov, România</p>
+        <p>Email: case-inteligente@outlook.com</p>
+        <p>Telefon: 0775602083</p>
     </section>
 
     <footer>
