--- a/produse.html
+++ b/produse.html
@@ -96,14 +96,14 @@
         <ul>
             <li><b>Iluminat inteligent</b>
                 <ul>
-                    <li>Bec inteligent LED (instalare și configurare) - 250 RON/buc</li>
+                    <li>Bec inteligent LED (instalare și configurare) - 100 RON/buc</li>
                     <li>Bandă LED RGB (montaj și conectare la aplicație) - 300 RON/5 metri</li>
-                    <li>Întrerupător smart Wi-Fi (montaj și configurare) - 400 RON/buc</li>
+                    <li>Întrerupător smart Wi-Fi (montaj și configurare) - 200 RON/buc</li>
                 </ul>
             </li>
             <li><b>Termostate inteligente</b>
                 <ul>
-                    <li>Termostat inteligent Wi-Fi (inclusiv instalare și configurare) - 850 RON</li>
+                    <li>Termostat inteligent Wi-Fi (inclusiv instalare și configurare) - 550 RON</li>
                     <li>Termostat pentru încălzire prin pardoseală (montaj și configurare) - 1.200 RON</li>
                 </ul>
             </li>
@@ -118,7 +118,7 @@
                 <ul>
                     <li>Priză inteligentă Wi-Fi (montaj și configurare) - 150 RON/buc</li>
                     <li>Smart Hub pentru automatizarea electrocasnicelor (montaj inclus) - 700 RON</li>
-                    <li>Robot aspirator inteligent (configurare și integrare în sistem) - 1.600 RON</li>
+                    <li>Robot aspirator inteligent (configurare și integrare în sistem) - 2.500 RON</li>
                 </ul>
             </li>
             <li><b>Control vocal și centralizare</b>
@@ -129,11 +129,11 @@
             </li>
             <li><b>Accesorii utile</b>
                 <ul>
-                    <li>Senzor inteligent de temperatură și umiditate (instalare și integrare) - 200 RON</li>
-                    <li>Senzor de inundație Wi-Fi (montaj și configurare) - 200 RON</li>
-                    <li>Senzor de prezență (instalare și configurare) - 300 RON</li>
-                    <li>Senzor de fum inteligent (montaj și conectare la aplicație) - 400 RON</li>
-                    <li>Senzor de gaz inteligent (instalare și configurare) - 450 RON</li>
+                    <li>Senzor inteligent de temperatură și umiditate (instalare și integrare) - 150 RON</li>
+                    <li>Senzor de inundație Wi-Fi (montaj și configurare) - 150 RON</li>
+                    <li>Senzor de prezență (instalare și configurare) - 200 RON</li>
+                    <li>Senzor de fum inteligent (montaj și conectare la aplicație) - 200 RON</li>
+                    <li>Senzor de gaz inteligent (instalare și configurare) - 250 RON</li>
                     <li>Senzor pentru uși/geamuri (montaj inclus) - 150 RON/buc</li>
                     <li>Barieră IR (infraroșu) (montaj și configurare) - 600 RON</li>
                 </ul>
@@ -142,10 +142,10 @@
 
         <h4>Costuri suplimentare: Manoperă fără dispozitive</h4>
         <ul>
-            <li><b>Manoperă pentru iluminat inteligent:</b> Instalare bec, bandă LED sau întrerupător - 150 RON/locație</li>
+            <li><b>Manoperă pentru iluminat inteligent:</b> Instalare bec, bandă LED sau întrerupător - 50 RON/buc</li>
             <li><b>Manoperă pentru termostate inteligente:</b> Instalare termostat și configurare - 300 RON/termostat</li>
-            <li><b>Manoperă pentru sisteme de securitate:</b> Cameră de supraveghere - 200 RON/buc; Senzori de securitate (fum, gaz, prezență, barieră IR) - 150 RON/buc</li>
-            <li><b>Manoperă pentru accesorii inteligente:</b> Senzori temperatură, inundație, uși - 150 RON/buc; Priză inteligentă - 100 RON/buc</li>
+            <li><b>Manoperă pentru sisteme de securitate:</b> Cameră de supraveghere - 200 RON/buc; Senzori de securitate (fum, gaz, prezență) - 50 RON/buc</li>
+            <li><b>Manoperă pentru accesorii inteligente:</b> Senzori temperatură, inundație, uși - 50 RON/buc; Priză inteligentă - 70 RON/buc</li>
         </ul>
 
         <h4>Costuri suplimentare: Deplasarea</h4>
@@ -154,7 +154,10 @@
             <li>Deplasare în afara municipiului Brașov - 2 RON/km</li>
         </ul>
 
-        <p><b>Pentru o ofertă personalizată, nu ezitați să ne contactați! Watsapp - 0775602083 </b></p>
+        <p><b>Pentru o ofertă personalizată, nu ezitați să ne contactați! Whatsapp - 0775602083 </b></p>
+        <br>
+        <p><b>Pretul produselor sunt estimative, calculate la dispozitive de calitate medie! </b></p>
+    
     </section>
 
     <footer>
