--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
-            color: black; /* Culoare text negru */
+            color: black;
         }
         header {
             text-align: center;
@@ -70,6 +70,13 @@
         footer a:hover {
             text-decoration: underline;
         }
+        h3 {
+            color: #333;
+        }
+        ul {
+            list-style-type: square;
+            padding-left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -87,10 +94,65 @@
     </header>
 
     <section>
-        <br>
-        <br>
         <h3>Informații Utile</h3>
         <p>Găsește cele mai bune sfaturi pentru integrarea tehnologiilor smart în casa ta și îmbunătățirea confortului zilnic.</p>
+        <ol>
+            <li><b>Beneficiile unei case inteligente:</b>
+                <ul>
+                    <li><b>Reducerea consumului de energie:</b> Dispozitivele inteligente, cum ar fi termostatele și becurile LED smart, permit economisirea energiei prin optimizarea consumului.</li>
+                    <li><b>Creșterea confortului:</b> Controlezi toate dispozitivele din casă de pe telefon sau prin comenzi vocale.</li>
+                    <li><b>Îmbunătățirea securității:</b> Sistemele de securitate inteligente oferă monitorizare în timp real.</li>
+                    <li><b>Ușurința în gestionare:</b> Cu un singur hub sau aplicație, poți controla dispozitivele din întreaga casă.</li>
+                </ul>
+            </li>
+            <li><b>Cum funcționează o casă inteligentă?</b>
+                <ul>
+                    <li><b>Control centralizat:</b> Toate dispozitivele se conectează la un hub precum Google Home sau Amazon Echo.</li>
+                    <li><b>Tehnologii utilizate:</b> Wi-Fi, Z-Wave și Zigbee, Bluetooth.</li>
+                    <li><b>Automatizare:</b> Creează rutine personalizate.</li>
+                </ul>
+            </li>
+            <li><b>Sfaturi pentru instalare și întreținere:</b>
+                <ul>
+                    <li><b>Compatibilitate:</b> Verifică dacă dispozitivele sunt compatibile cu sistemul tău.</li>
+                    <li><b>Rețea Wi-Fi:</b> Ai nevoie de un router performant.</li>
+                    <li><b>Actualizări:</b> Instalează regulat actualizările firmware.</li>
+                    <li><b>Testare periodică:</b> Testează lunar senzorii.</li>
+                </ul>
+            </li>
+            <li><b>Ghiduri practice pentru utilizatori:</b>
+                <ul>
+                    <li>Cum să conectezi un bec inteligent la aplicație?</li>
+                    <li>Cum setezi termostatul pentru economisirea energiei?</li>
+                    <li>Cum să creezi o rutină?</li>
+                </ul>
+            </li>
+            <li><b>Întrebări frecvente (FAQ):</b>
+                <ul>
+                    <li>Ce dispozitive pot fi integrate într-o casă inteligentă?</li>
+                    <li>Ce se întâmplă dacă se întrerupe curentul electric?</li>
+                    <li>Este complicat să instalez un sistem singur?</li>
+                    <li>Cum aleg între Alexa, Google Home și alte sisteme?</li>
+                </ul>
+            </li>
+            <li><b>Informații despre siguranță și confidențialitate:</b>
+                <ul>
+                    <li>Criptarea datelor.</li>
+                    <li>Parole puternice.</li>
+                    <li>Producători de întrecredere.</li>
+                </ul>
+            </li>
+            <li><b>Exemple de proiecte implementate:</b>
+                <ul>
+                    <li>Apartament inteligent.</li>
+                    <li>Casă de vacanță.</li>
+                    <li>Sistem de securitate personalizat.</li>
+                </ul>
+            </li>
+            <li><b>Contact și oferte personalizate:</b>
+                <p>"Pentru mai multe detalii sau o ofertă personalizată, nu ezitați să ne contactați! Suntem aici pentru a vă ajuta să transformați locuința într-o casă inteligentă."</p>
+            </li>
+        </ol>
     </section>
 
     <footer>
