--- a/info.html
+++ b/info.html
@@ -70,13 +70,6 @@
         footer a:hover {
             text-decoration: underline;
         }
-        h3 {
-            color: #333;
-        }
-        ul {
-            list-style-type: square;
-            padding-left: 20px;
-        }
     </style>
 </head>
 <body>
@@ -94,67 +87,55 @@
     </header>
 
     <section>
-        <br>
-        <br>
-        <h3>Informații Utile</h3>
-        <p>Găsește cele mai bune sfaturi pentru integrarea tehnologiilor smart în casa ta și îmbunătățirea confortului zilnic.</p>
-        <ol>
-            <li><b>Beneficiile unei case inteligente:</b>
-                <ul>
-                    <li><b>Reducerea consumului de energie:</b> Dispozitivele inteligente, cum ar fi termostatele și becurile LED smart, permit economisirea energiei prin optimizarea consumului.</li>
-                    <li><b>Creșterea confortului:</b> Controlezi toate dispozitivele din casă de pe telefon sau prin comenzi vocale.</li>
-                    <li><b>Îmbunătățirea securității:</b> Sistemele de securitate inteligente oferă monitorizare în timp real.</li>
-                    <li><b>Ușurința în gestionare:</b> Cu un singur hub sau aplicație, poți controla dispozitivele din întreaga casă.</li>
-                </ul>
-            </li>
-            <li><b>Cum funcționează o casă inteligentă?</b>
-                <ul>
-                    <li><b>Control centralizat:</b> Toate dispozitivele se conectează la un hub precum Google Home sau Amazon Echo.</li>
-                    <li><b>Tehnologii utilizate:</b> Wi-Fi, Z-Wave și Zigbee, Bluetooth.</li>
-                    <li><b>Automatizare:</b> Creează rutine personalizate.</li>
-                </ul>
-            </li>
-            <li><b>Sfaturi pentru instalare și întreținere:</b>
-                <ul>
-                    <li><b>Compatibilitate:</b> Verifică dacă dispozitivele sunt compatibile cu sistemul tău.</li>
-                    <li><b>Rețea Wi-Fi:</b> Ai nevoie de un router performant.</li>
-                    <li><b>Actualizări:</b> Instalează regulat actualizările firmware.</li>
-                    <li><b>Testare periodică:</b> Testează lunar senzorii.</li>
-                </ul>
-            </li>
-            <li><b>Ghiduri practice pentru utilizatori:</b>
-                <ul>
-                    <li>Cum să conectezi un bec inteligent la aplicație?</li>
-                    <li>Cum setezi termostatul pentru economisirea energiei?</li>
-                    <li>Cum să creezi o rutină?</li>
-                </ul>
-            </li>
-            <li><b>Întrebări frecvente (FAQ):</b>
-                <ul>
-                    <li>Ce dispozitive pot fi integrate într-o casă inteligentă?</li>
-                    <li>Ce se întâmplă dacă se întrerupe curentul electric?</li>
-                    <li>Este complicat să instalez un sistem singur?</li>
-                    <li>Cum aleg între Alexa, Google Home și alte sisteme?</li>
-                </ul>
-            </li>
-            <li><b>Informații despre siguranță și confidențialitate:</b>
-                <ul>
-                    <li>Criptarea datelor.</li>
-                    <li>Parole puternice.</li>
-                    <li>Producători de întrecredere.</li>
-                </ul>
-            </li>
-            <li><b>Exemple de proiecte implementate:</b>
-                <ul>
-                    <li>Apartament inteligent.</li>
-                    <li>Casă de vacanță.</li>
-                    <li>Sistem de securitate personalizat.</li>
-                </ul>
-            </li>
-            <li><b>Contact și oferte personalizate:</b>
-                <p>"Pentru mai multe detalii sau o ofertă personalizată, nu ezitați să ne contactați! Suntem aici pentru a vă ajuta să transformați locuința într-o casă inteligentă."</p>
-            </li>
-        </ol>
+        <h3>1. Beneficiile unei case inteligente</h3>
+        <p>Automatizarea locuinței oferă multiple avantaje care îmbunătățesc calitatea vieții și reduc costurile.</p>
+        <ul>
+            <li><strong>Reducerea consumului de energie:</strong> Dispozitivele inteligente, cum ar fi termostatele și becurile LED smart, permit economisirea energiei prin optimizarea consumului. De exemplu, luminile se pot stinge automat când nu ești acasă sau încălzirea se ajustează în funcție de prezență.</li>
+            <li><strong>Creșterea confortului:</strong> Controlezi toate dispozitivele din casă de pe telefon sau prin comenzi vocale. Poți seta rutine precum "Bună dimineața", care pornește lumina, muzica preferată și termostatul.</li>
+            <li><strong>Îmbunătățirea securității:</strong> Sistemele de securitate inteligente oferă monitorizare în timp real, notificări pe telefon și capacitatea de a răspunde la situații de urgență, cum ar fi detectarea fumului sau gazului.</li>
+            <li><strong>Ușurința în gestionare:</strong> Cu un singur hub sau aplicație, poți controla dispozitivele din întreaga casă, fără să comuți între mai multe aplicații.</li>
+        </ul>
+
+        <h3>2. Cum funcționează o casă inteligentă?</h3>
+        <p>Automatizarea casei implică integrarea dispozitivelor electronice și controlul lor prin rețea.</p>
+        <ul>
+            <li><strong>Control centralizat:</strong> Toate dispozitivele se conectează la un hub (precum Google Home, Amazon Echo sau un hub Z-Wave). Prin acesta, le poți controla fie vocal, fie printr-o aplicație pe telefon.</li>
+            <li><strong>Tehnologii utilizate:</strong> Wi-Fi, Z-Wave și Zigbee sunt protocoale utilizate pentru a conecta dispozitivele în casă.</li>
+            <li><strong>Automatizare:</strong> Creează rutine personalizate, cum ar fi oprirea luminilor și electrocasnicelor atunci când pleci de acasă.</li>
+        </ul>
+
+        <h3>3. Sfaturi pentru instalare și întreținere</h3>
+        <p>Asigură-te că dispozitivele tale sunt compatibile și că rețeaua Wi-Fi poate susține multiple conexiuni.</p>
+        <ul>
+            <li><strong>Compatibilitate:</strong> Verifică compatibilitatea dispozitivelor cu sistemele populare de automatizare.</li>
+            <li><strong>Rețea Wi-Fi:</strong> Asigură-te că ai un router performant pentru a susține dispozitivele Wi-Fi.</li>
+            <li><strong>Testare periodică:</strong> Verifică senzorii și actualizează firmware-ul dispozitivelor pentru a preveni eventualele probleme.</li>
+        </ul>
+
+        <h3>4. Ghiduri practice pentru utilizatori</h3>
+        <p>Urmează aceste instrucțiuni pentru a instala și a configura dispozitivele smart din casa ta.</p>
+        <ul>
+            <li><strong>Cum să conectezi un bec inteligent:</strong> Instalează becul, deschide aplicația și urmează instrucțiunile pentru configurare.</li>
+            <li><strong>Cum setezi termostatul pentru economisirea energiei:</strong> Alege modul Eco și setează temperaturile dorite pe timpul nopții.</li>
+        </ul>
+
+        <h3>5. Întrebări frecvente (FAQ)</h3>
+        <ul>
+            <li><strong>Ce dispozitive pot fi integrate într-o casă inteligentă?</strong> Aproape orice: iluminat, termostate, camere de supraveghere, electrocasnice și chiar draperii motorizate.</li>
+            <li><strong>Este complicat să instalez un sistem singur?</strong> Depinde de dispozitiv, dar majoritatea sunt ușor de instalat de către utilizatori.</li>
+        </ul>
+
+        <h3>6. Informații despre siguranță și confidențialitate</h3>
+        <p>Asigură-te că dispozitivele tale sunt sigure și protejează-ți datele personale prin criptare și parole puternice.</p>
+
+        <h3>7. Exemple de proiecte implementate</h3>
+        <ul>
+            <li><strong>Apartament inteligent:</strong> Automatizarea completă a unui apartament cu becuri smart, termostat și sistem de securitate.</li>
+            <li><strong>Casă de vacanță:</strong> Controlul la distanță al iluminatului și încălzirii.</li>
+        </ul>
+
+        <h3>8. Contact și oferte personalizate</h3>
+        <p>Pentru mai multe detalii sau o ofertă personalizată, nu ezitați să ne contactați! Suntem aici pentru a vă ajuta să transformați locuința într-o casă inteligentă.</p>
     </section>
 
     <footer>
