--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Casa Ta Inteligentă. Toate drepturile rezervate.</p>
-        <p><a href="#">Termeni și Condiții</a> | <a href="#">Politica de Confidențialitate</a> | <a href="#">Contact</a></p>
+         <p><a href="termeni si conditii.html">Termeni și Condiții</a> | <a href="politica de confidentialitate">Politica de Confidențialitate</a> | <a href="contact.html">Contact</a></p>
     </footer>
 </body>
 </html>
