--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,17 @@
             margin: 0 10px;
         }
         nav ul li a {
-            color: black;
+            color: #007BFF; /* Culoare albastru deschis */
             text-decoration: none;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 5px;
+            background-color: #E8F0FE; /* Fundal deschis */
+            transition: background-color 0.3s, color 0.3s;
+        }
+        nav ul li a:hover {
+            background-color: #007BFF; /* Fundal albastru intens */
+            color: white; /* Text alb */
         }
         section {
             padding: 20px;
