--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         nav {
-            background-color: #007BFF; /* Fundal albastru */
+            background-color: #99CCCC; /* Fundal albastru */
             position: sticky; /* Meniu fix în partea de sus */
             top: 0;
             z-index: 1000; /* Asigurăm că meniul rămâne deasupra altor elemente */
@@ -58,7 +58,7 @@
             font-weight: bold;
             padding: 10px 15px;
             border-radius: 5px;
-            background-color: #99CCCC; /* Fundal albastru mai închis */
+            background-color: #003d80; /* Fundal albastru mai închis */
             transition: background-color 0.3s, color 0.3s;
             display: block; /* Pentru o dimensiune consistentă pe mobil */
             text-align: center;
