--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             font-weight: bold;
             padding: 10px 15px;
             border-radius: 5px;
-            background-color: #003d80; /* Fundal albastru mai închis */
+            background-color: #66CCFF; /* Fundal albastru mai închis */
             transition: background-color 0.3s, color 0.3s;
             display: block; /* Pentru o dimensiune consistentă pe mobil */
             text-align: center;
