--- a/info.html
+++ b/info.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <header>
-        <img src="https://www.esserepensiero.it/s/cc_images/cache_29582843.jpg?t=1691353368" alt="Casa Ta Inteligentă" class="logo">
+        <img src="14.jpg" alt="Casa Ta Inteligentă" class="logo">
         <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
         <nav>
             <ul>
