--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <header>
-        <img src="https://www.esserepensiero.it/s/cc_images/cache_29582843.jpg?t=1691353368" alt="Casa Ta Inteligentă" class="logo">
+        <img src="15.jpg" alt="Casa Ta Inteligentă" class="logo">
         <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
     </header>
 
