--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
 
         nav ul li a:hover {
-            background-color: #ff9800;
+            background-color: #1ea1f6;
             color: white;
         }
 
