--- a/produse.html
+++ b/produse.html
@@ -124,7 +124,7 @@
         <div class="logo-container">
             <img src="12.jpg" alt="Casa Ta Inteligentă">
         </div>
-        <h2 class="slogan">Transformăm locuințele obișnuite în case inteligente!</h2>
+        <h2 class="slogan"></h2>
         <nav>
             <ul>
                 <li><a href="index.html">Acasă</a></li>
