--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         header {
             text-align: center;
             background-color: #333;
-            color: black;
+            color: white;
             padding: 0;
             position: relative;
             width: 100%;
@@ -31,11 +31,11 @@
             bottom: 20px;
             width: 100%;
             font-size: 1.5em;
-            color: black;
+            color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         nav {
-            background-color: #99CCCC; /* Fundal albastru */
+            background-color: #333; /* Fundal negru */
             position: sticky; /* Meniu fix în partea de sus */
             top: 0;
             z-index: 1000; /* Asigurăm că meniul rămâne deasupra altor elemente */
@@ -58,13 +58,13 @@
             font-weight: bold;
             padding: 10px 15px;
             border-radius: 5px;
-            background-color: #66CCFF; /* Fundal albastru mai închis */
+            background-color: #00B4CC; /* Fundal albastru deschis */
             transition: background-color 0.3s, color 0.3s;
             display: block; /* Pentru o dimensiune consistentă pe mobil */
             text-align: center;
         }
         nav ul li a:hover {
-            background-color: #003d80; /* Fundal albastru intens */
+            background-color: #006F7F; /* Fundal albastru închis */
             color: white; /* Text alb */
         }
         section {
